--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Swift
+name: Build
 
 on:
   push:
@@ -15,5 +15,3 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build
       run: swift build -v
-    - name: Run tests
-      run: swift test -v
